minor fixes and gui changes